examples/error/missingReturn.kl
@Use("java")
public integer sumTwoNumbers(integer numOne, integer numTwo) {
    integer result = numOne + numTwo;
}
